--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "npx run ./node_modules/.bin/cypress run",
-        "open": "npx run ./node_modules/.bin/cypress open"
+        "test": "./node_modules/.bin/cypress run",
+        "open": "./node_modules/.bin/cypress open"
     },
     "repository": {
         "type": "git",
@@ -20,6 +20,11 @@
     "dependencies": {
         "cypress": "^9.7.0",
         "eslint": "^8.27.0",
-        "prettier": "^2.7.1"
-    }
+        "prettier": "^2.7.1",
+        "cypress-cucumber-preprocessor": "^4.3.1"
+    },
+    "cypress-cucumber-preprocessor": 
+    {
+        "nonGlobalStepDefinitions": true
+     }
 }
